crates/rstest-bdd-macros/tests/ui/datatable_duplicate.stderr
error: only one datatable parameter is permitted
 --> tests/ui/datatable_duplicate.rs:6:60
  |
6 | fn step(#[datatable] first: Vec<Vec<String>>, #[datatable] second: Vec<Vec<String>>) {}
  |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^
